--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ trace = ["dep:tracing"]
 
 
 [dependencies]
+base64 = "0.13"
 cfg-if = "1"
 rand = "0.8.5"
 reqwest = { version = "0.11", default-features = false, features = ["json"] }
