--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "interactsh-rs"
-version = "0.1.0-alpha+001"
+version = "0.1.0-alpha+20220923B001"
 edition = "2021"
 authors = ["Matt George <pyroraptor07@gmail.com>"]
 license = "MIT OR Apache-2.0"
