adding smol as an async test target

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,6 +50,7 @@ openssl = { version = "0.10.41", optional = true }
 [dev-dependencies]
 tokio = { version = "1", default-features = false, features = ["macros", "rt"] }
 async-std = { version = "1", features = ["tokio1", "attributes"] }
+smol = "1"
 
 [build-dependencies]
 rustversion = "1"
