--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ rustcrypto = ["dep:rsa", "dep:aes", "dep:cfb-mode", "dep:sha2", "dep:digest", "d
 reqwest-native-tls = ["reqwest/default-tls"]
 reqwest-native-tls-vendored = ["reqwest-native-tls", "reqwest/native-tls-vendored"]
 reqwest-rustls-tls = ["reqwest/rustls-tls"]
+reqwest-socks-proxy = ["reqwest/socks"]
 
 # Other features
 async-compat = ["dep:async-compat"]
@@ -30,11 +31,13 @@ nightly = []
 [dependencies]
 base64 = "0.13"
 cfg-if = "1"
+# hex = "0.4"
 rand = "0.8.5"
 reqwest = { version = "0.11", default-features = false, features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1"
-uuid = "1"
+svix-ksuid = "0.6"
+uuid = { version = "1", features = ["v4"] }
 
 # RustCrypto dependencies
 aes = { version = "0.8.1", optional = true }
