--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,12 +23,12 @@ reqwest-rustls-tls = ["reqwest/rustls-tls"]
 reqwest-socks-proxy = ["reqwest/socks"]
 
 # Other features
-async-compat = ["dep:async-compat"]
 trace = ["dep:tracing"]
 nightly = []
 
 
 [dependencies]
+async-compat = "0.2"
 base64 = "0.13"
 cfg-if = "1"
 rand = "0.8.5"
@@ -50,12 +50,13 @@ sha2 = { version = "0.10.6", optional = true }
 openssl = { version = "0.10.41", optional = true }
 
 # Other optional dependencies
-async-compat = { version = "0.2", optional = true }
 tracing = { version = "0.1", optional = true }
 thiserror = "1.0.36"
 
 [dev-dependencies]
 tokio = { version = "1", default-features = false, features = ["macros", "rt"] }
+async-std = { version = "1", features = ["attributes"] }
+smol = "1"
 
 [build-dependencies]
 rustversion = "1"
