--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ readme = "README.md"
 
 
 [features]
-default = ["rustcrypto", "reqwest-rustls-tls"]
+default = ["rustcrypto", "reqwest-rustls-tls", "async-compat"]
 
 # Crypto features
 openssl = ["dep:openssl"]
@@ -23,12 +23,12 @@ reqwest-rustls-tls = ["reqwest/rustls-tls"]
 reqwest-socks-proxy = ["reqwest/socks"]
 
 # Other features
+async-compat = ["dep:async-compat"]
 trace = ["dep:tracing"]
 nightly = []
 
 
 [dependencies]
-async-compat = "0.2"
 base64 = "0.13"
 cfg-if = "1"
 rand = "0.8.5"
@@ -52,6 +52,7 @@ sha2 = { version = "0.10.6", optional = true }
 openssl = { version = "0.10.41", optional = true }
 
 # Other optional dependencies
+async-compat = { version = "0.2", optional = true }
 tracing = { version = "0.1", optional = true }
 
 [dev-dependencies]
