--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ reqwest = { version = "0.11", default-features = false, features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1"
 svix-ksuid = "0.6"
+secrecy = "0.8"
 thiserror = "1.0.36"
 time = { version = "0.3.14", features = ["serde", "formatting", "parsing"] }
 uuid = { version = "1", features = ["v4"] }
