--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,7 +54,7 @@ openssl = { version = "0.10.41", optional = true }
 
 # Other optional dependencies
 async-compat = { version = "0.2", optional = true }
-tracing = { version = "0.1", optional = true }
+# tracing = { version = "0.1", optional = true }
 
 [dev-dependencies]
 tokio = { version = "1", default-features = false, features = ["macros", "rt"] }
