--- a/Cargo.toml
+++ b/Cargo.toml
@@ -64,6 +64,8 @@ smol = "1"
 hex = "0.4"
 fake = "2.5"
 trust-dns-resolver = "0.22"
+dotenvy = "0.15"
+once_cell = "1.15"
 
 [build-dependencies]
 rustversion = "1"
