--- a/examples/cli_client_shared/Cargo.toml
+++ b/examples/cli_client_shared/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cli_client_shared"
-version = "0.1.0-beta"
+version = "0.1.0-RC1"
 edition = "2021"
 publish = false
 authors = ["Matt George <pyroraptor07@gmail.com>"]
