--- a/examples/cli_client_tokio/Cargo.toml
+++ b/examples/cli_client_tokio/Cargo.toml
@@ -7,13 +7,13 @@ publish = false
 [dependencies]
 # Interactsh-rs
 # This uses the Rust Crypto crates for cryptography and Rustls for TLS
-interactsh-rs = { path = "../..", default-features = false, features = ['rustcrypto', 'reqwest-rustls-tls'] }
+interactsh-rs = { path = "../..", default-features = false, features = ['rustcrypto', 'rustls-tls'] }
 
 # To use OpenSSL instead:
-# interactsh-rs = { path = "../..", default-features = false, features = ['openssl', 'reqwest-native-tls'] }
+# interactsh-rs = { path = "../..", default-features = false, features = ['openssl', 'native-tls'] }
 
 # For vendored OpenSSL:
-# interactsh-rs = { path = "../..", default-features = false, features = ['openssl-vendored', 'reqwest-native-tls-vendored'] }
+# interactsh-rs = { path = "../..", default-features = false, features = ['openssl-vendored', 'native-tls-vendored'] }
 
 # Async runtime
 tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread", "sync"] }
