--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,7 +45,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: "Install the nightly Rust toolchain"
-        run: rustup toolchain install -c rustfmt nightly
+        run: rustup toolchain install nightly -c rustfmt
 
       - name: "Check formatting"
         run: cargo +nightly fmt --check
