--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,8 @@ reqwest-native-tls = ["native-tls"]
 reqwest-native-tls-vendored = ["native-tls-vendored"]
 reqwest-rustls-tls = ["rustls-tls"]
 
+# TODO: Snafu features to enable backtraces and provider API (should be used in binaries only)
+
 # Other features
 async-compat = ["dep:async-compat"]
 nightly = []
@@ -42,11 +44,11 @@ base64 = "0.13"
 cfg-if = "1"
 rand = "0.8.5"
 reqwest = { version = "0.11", default-features = false, features = ["json"] }
+secrecy = "0.8"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1"
+snafu = "0.7.3"
 svix-ksuid = "0.6"
-secrecy = "0.8"
-thiserror = "1.0.36"
 time = { version = "0.3.14", features = ["serde", "formatting", "parsing"] }
 uuid = { version = "1", features = ["v4"] }
 
