--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Main Tests
+name: CI Tests
 on:
   push:
     branches:
@@ -142,15 +142,27 @@ jobs:
           - "rustcrypto,rustls-tls,async-compat"
           - "rustcrypto,rustls-tls"
     runs-on: windows-latest
+    defaults:
+      run:
+        shell: msys2 {0}
     steps:
-      - name: "Install the stable GNU Rust toolchain"
-        run: rustup toolchain install stable-gnu
-
+      - name: Setup MSYS2 environment and MinGW+Rust toolchain
+        uses: msys2/setup-msys2@v2
+        with:
+          msystem: MINGW64
+          update: true
+          install: >-
+            git
+            base-devel
+            pkg-config
+            mingw-w64-x86_64-toolchain
+            mingw-w64-x86_64-rust
+        
       - name: "Checkout"
         uses: actions/checkout@v3
           
       - name: "Run HTTP test"
-        run: cargo +stable-gnu test --no-default-features --features ${{ matrix.features }} --no-fail-fast http_logs_from_pub
+        run: cargo test --no-default-features --features ${{ matrix.features }} --no-fail-fast http_logs_from_pub --target x86_64-pc-windows-gnu
 
   os_compat_win-msvc_openssl:
     needs: test_suite
@@ -165,25 +177,48 @@ jobs:
     runs-on: windows-latest
     steps:
       - name: "Install OpenSSL"
-        run: vcpkg install openssl:x64-windows-static-md
+        run: |
+          vcpkg install openssl:x64-windows-static
+          vcpkg integrate install
 
       - name: "Checkout"
         uses: actions/checkout@v3
           
       - name: "Run HTTP test"
         run: cargo test --no-default-features --features ${{ matrix.features }} --no-fail-fast http_logs_from_pub
+        env:
+          OPENSSL_DIR: 'C:\vcpkg\installed\x64-windows-static'
 
-  # Commenting this out for now; getting GNU and OpenSSL set up properly on Windows will take some more work
-  # os_compat_win_gnu_openssl:
-  #   needs: test_suite
-  #   strategy:
-  #     fail-fast: false
-  #     matrix:
-  #       features: 
-  #         - "openssl,native-tls,async-compat"
-  #         - "openssl,native-tls"
-  #         - "openssl-vendored,native-tls-vendored,async-compat"
-  #         - "openssl-vendored,native-tls-vendored"
-  #   runs-on: windows-latest
-  #   steps:
-  #     TODO
+  os_compat_win_gnu_openssl:
+    needs: test_suite
+    strategy:
+      fail-fast: false
+      matrix:
+        features: 
+          - "openssl,native-tls,async-compat"
+          - "openssl,native-tls"
+          - "openssl-vendored,native-tls-vendored,async-compat"
+          - "openssl-vendored,native-tls-vendored"
+    runs-on: windows-latest
+    defaults:
+      run:
+        shell: msys2 {0}
+    steps:
+      - name: Setup MSYS2 environment and MinGW+Rust toolchain
+        uses: msys2/setup-msys2@v2
+        with:
+          msystem: MINGW64
+          update: true
+          install: >-
+            git
+            base-devel
+            openssl-devel
+            pkg-config
+            mingw-w64-x86_64-toolchain
+            mingw-w64-x86_64-rust
+        
+      - name: "Checkout"
+        uses: actions/checkout@v3
+          
+      - name: "Run HTTP test"
+        run: cargo test --no-default-features --features ${{ matrix.features }} --no-fail-fast http_logs_from_pub --target x86_64-pc-windows-gnu
