--- a/Cargo.toml
+++ b/Cargo.toml
@@ -65,6 +65,8 @@ openssl = { version = "0.10.41", optional = true }
 
 # Other optional dependencies
 async-compat = { version = "0.2", optional = true }
+async-trait = "0.1.58"
+smallvec = { version = "1.10.0", features = ["serde"] }
 # log = { version = "0.4.17", optional = true }
 
 
