github workflow fix

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -86,6 +86,8 @@ jobs:
       INTERACTSHRS_TEST_LOCAL_SERVER_TOKEN: ${{ secrets.LOCAL_SERVER_TOKEN }}
       INTERACTSHRS_TEST_LOCAL_SERVER_FQDN: ${{ secrets.LOCAL_SERVER_FQDN }}
       INTERACTSHRS_TEST_LOCAL_SERVER_DNS_OVERRIDE_ADDR: "127.0.0.1"
+      INTERACTSHRS_TEST_PROXY_ADDR: "127.0.0.1"
+      INTERACTSHRS_TEST_PROXY_PORT: "3128"
     services:
       local_server:
         image: ghcr.io/pyroraptor07/interactsh-local-test-server:main
