--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -88,18 +88,20 @@ jobs:
       INTERACTSHRS_TEST_LOCAL_SERVER_DNS_OVERRIDE_ADDR: "127.0.0.1"
       INTERACTSHRS_TEST_PROXY_ADDR: "127.0.0.1"
       INTERACTSHRS_TEST_PROXY_PORT: "3128"
-    services:
-      local_server:
-        image: ghcr.io/pyroraptor07/interactsh-local-test-server:main
-        credentials:
-          username: ${{ github.actor }}
-          password: ${{ secrets.DOCKER_REPO_TOKEN }}
-        env:
-          RUST_TEST_HOSTNAME: ${{ secrets.LOCAL_SERVER_FQDN }}
-          RUST_TEST_AUTH_TOKEN: ${{ secrets.LOCAL_SERVER_TOKEN }}
-        ports:
-          - 80:80
-          - 443:443
+      INTERACTSHRS_TEST_CERT_SUBJ: ${{ secrets.CERT_SUBJECT_LINE }}
+    # services:
+    #   local_server:
+    #     image: ghcr.io/pyroraptor07/interactsh-local-test-server:main
+    #     credentials:
+    #       username: ${{ github.actor }}
+    #       password: ${{ secrets.DOCKER_REPO_TOKEN }}
+    #     env:
+    #       RUST_TEST_HOSTNAME: ${{ secrets.LOCAL_SERVER_FQDN }}
+    #       RUST_TEST_AUTH_TOKEN: ${{ secrets.LOCAL_SERVER_TOKEN }}
+    #       RUST_TEST_CERT_SUBJ: ${{ secrets.CERT_SUBJECT_LINE }}
+    #     ports:
+    #       - 80:80
+    #       - 443:443
 
     steps:
       - name: "Checkout"
@@ -107,12 +109,18 @@ jobs:
 
       - name: "Start proxy server"
         run: docker-compose --file ./docker/squid/docker-compose.yml up -d
+
+      - name: "Start local Interactsh server"
+        run: docker-compose --file ./docker/local_server/docker-compose.yml up -d
           
       - name: "Run tests"
         run: cargo test --no-default-features --features ${{ matrix.features }} --no-fail-fast
 
       - name: "Stop proxy server"
         run: docker-compose --file ./docker/squid/docker-compose.yml down
+
+      - name: "Stop local Interactsh server"
+        run: docker-compose --file ./docker/local_server/docker-compose.yml down
         
   os_compat_nix:
     needs: test_suite
