--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ keywords = ["interactsh", "oob-interactions"]
 
 
 [features]
-default = ["rustcrypto", "rustls-tls", "async-compat"]
+default = ["rustcrypto", "rustls-tls", "async-compat", "client-next"]
 
 # Crypto features
 openssl = ["dep:openssl"]
@@ -30,6 +30,7 @@ reqwest-rustls-tls = ["rustls-tls"]
 
 # Other features
 async-compat = ["dep:async-compat"]
+client-next = ["dep:futures"]
 nightly = []
 
 
@@ -41,6 +42,7 @@ reqwest = { version = "0.11", default-features = false, features = ["json"] }
 secrecy = "0.8"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1"
+smallvec = { version = "1.10.0", features = ["serde"] }
 snafu = "0.7.3"
 time = { version = "0.3.14", features = ["serde", "formatting", "parsing"] }
 uuid = { version = "1", features = ["v4"] }
@@ -56,8 +58,7 @@ openssl = { version = "0.10.41", optional = true }
 
 # Other optional dependencies
 async-compat = { version = "0.2", optional = true }
-async-trait = "0.1.58"
-smallvec = { version = "1.10.0", features = ["serde"] }
+futures = { version = "0.3.25", optional = true }
 
 
 [dev-dependencies]
