--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ reqwest-rustls-tls = ["rustls-tls"]
 
 # Other features
 async-compat = ["dep:async-compat"]
-client-next = ["dep:futures"]
+client-next = ["dep:futures", "dep:parking_lot"]
 nightly = []
 
 
@@ -59,6 +59,7 @@ openssl = { version = "0.10.41", optional = true }
 # Other optional dependencies
 async-compat = { version = "0.2", optional = true }
 futures = { version = "0.3.25", optional = true }
+parking_lot = { version = "0.12.1", optional = true }
 
 
 [dev-dependencies]
