--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ reqwest-rustls-tls = ["rustls-tls"]
 
 # Other features
 async-compat = ["dep:async-compat"]
-client-next = ["dep:parking_lot"]
+client-next = []
 log-stream = ["dep:futures-util", "dep:async-stream", "dep:async-io"]
 nightly = []
 
@@ -38,6 +38,7 @@ nightly = []
 [dependencies]
 base64 = "0.21.0"
 cfg-if = "1"
+parking_lot = "0.12.1"
 rand = "0.8.5"
 reqwest = { version = "0.11", default-features = false, features = ["json"] }
 secrecy = "0.8"
@@ -61,10 +62,7 @@ openssl = { version = "0.10.41", optional = true }
 async-compat = { version = "0.2", optional = true }
 async-io = { version = "1.12", optional = true }
 async-stream = { version = "0.3.3", optional = true }
-# futures = { version = "0.3.25", optional = true }
-# futures-core = { version = "0.3.25", optional = true }
 futures-util = { version = "0.3.25", optional = true }
-parking_lot = { version = "0.12.1", optional = true }
 
 
 [dev-dependencies]
