--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ default = ["rustcrypto", "rustls-tls", "async-compat"]
 # Crypto features
 openssl = ["dep:openssl"]
 openssl-vendored = ["openssl", "openssl?/vendored"]
-rustcrypto = ["dep:rsa", "dep:aes", "dep:cfb-mode", "dep:sha2", "dep:digest", "dep:inout"]
+rustcrypto = ["dep:rsa", "dep:aes", "dep:cfb-mode", "dep:sha2"]
 
 # TLS features (new names)
 native-tls = ["reqwest/default-tls"]
@@ -34,7 +34,7 @@ nightly = []
 
 
 [dependencies]
-base64 = "0.13"
+base64 = "0.21.0"
 cfg-if = "1"
 rand = "0.8.5"
 reqwest = { version = "0.11", default-features = false, features = ["json"] }
@@ -49,9 +49,7 @@ uuid = { version = "1", features = ["v4"] }
 # RustCrypto dependencies
 aes = { version = "0.8.1", optional = true }
 cfb-mode = { version = "0.8.2", optional = true }
-digest = { version = "0.10.5", optional = true }
-inout = { version = "0.1.3", features = ["std"], optional = true }
-rsa = { version = "0.6.1", optional = true }
+rsa = { version = "0.8.0", optional = true }
 sha2 = { version = "0.10.6", optional = true }
 
 # Native crypto dependencies
