use vscode settings for addtl features

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ keywords = ["interactsh", "oob-interactions"]
 
 
 [features]
-default = ["rustcrypto", "rustls-tls", "async-compat", "client-next", "log-stream"]
+default = ["rustcrypto", "rustls-tls", "async-compat"]
 
 # Crypto features
 openssl = ["dep:openssl"]
