--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,10 +36,11 @@ nightly = []
 
 
 [dependencies]
+async-lock = "2.6.0"
 async-trait = "0.1.62"
 base64 = "0.21.0"
 cfg-if = "1"
-parking_lot = "0.12.1"
+# parking_lot = "0.12.1"
 rand = "0.8.5"
 reqwest = { version = "0.11", default-features = false, features = ["json"] }
 secrecy = "0.8"
