Added TLS select option
Added an option to set the TLS backend to use in the event that both native and rustls features are enabled.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,9 @@ repository = "https://github.com/pyroraptor07/interactsh-rs"
 keywords = ["interactsh", "oob-interactions"]
 
 
+[package.metadata.docs.rs]
+features = ["log-stream", "native-tls"]
+
 [features]
 default = ["rustcrypto", "rustls-tls", "async-compat"]
 
