--- a/crates/interactsh-rs-crypto/Cargo.toml
+++ b/crates/interactsh-rs-crypto/Cargo.toml
@@ -18,8 +18,10 @@ impl-deps = ["dep:base64", "dep:rand"]
 
 [dependencies]
 bytes = "1.4.0"
-snafu = "0.7.4"
+paste = "1.0.14"
+snafu = "0.8.0"
 tap = "1.0"
+zeroize = "1.7.0"
 
 # Shared dependencies used for trait implementations
 base64 = { version = "0.21.2", optional = true }
