--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "interactsh-rs"
-version = "0.3.0"
+version = "0.3.1"
 edition = "2021"
 authors = ["Matt George <pyroraptor07@gmail.com>"]
 license = "MIT OR Apache-2.0"
@@ -9,6 +9,8 @@ readme = "README.md"
 repository = "https://github.com/pyroraptor07/interactsh-rs"
 keywords = ["interactsh", "oob-interactions"]
 
+[badges]
+maintenance = { status = "looking-for-maintainer" }
 
 [features]
 default = ["rustcrypto", "rustls-tls", "async-compat"]
